human_written_tests/WebAssembly/processed_control_flow_validation/test_if_35.wast
(assert_invalid
  (module (func $type-no-else-vs-num (result i32)
    (if (result i32) (i32.const 1) (then (i32.const 1)))
  ))
  "type mismatch"
)